--- a/ttes.html
+++ b/ttes.html
@@ -29,7 +29,7 @@
 
             }
         }
-        //2. 首先先排除其他人，然后才设置自己的样式 这种排除其他人的思想我们成为排他思想
+        //2. 首先先排除其他人设置自己的样式 这种排除其他人的思想我们成为排他思想
     </script>
 </body>
 
