--- a/ttes.html
+++ b/ttes.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./xixi.css">
 </head>
 
 <body>
+
+    <h1>hello</h1>
     <button>按钮1</button>
     <button>按钮2</button>
     <button>按钮3</button>
